--- a/downstream/modules/topologies/ref-ocp-b-env-a.adoc
+++ b/downstream/modules/topologies/ref-ocp-b-env-a.adoc
@@ -1,7 +1,7 @@
 [id="ocp-b-env-a"]
 = Operator enterprise topology
 
-The enterprise topology is intended for organizations that require {PlatformNameShort} {PlatformVers} to be deployed with redundancy or higher compute for large volumes of automation.
+The enterprise topology is intended for organizations that require {PlatformNameShort} to be deployed with redundancy or higher compute for large volumes of automation.
 
 == Infrastructure topology
 
