AAP-29918 - Update Creating a user with UI changes

--- a/downstream/modules/platform/proc-controller-creating-a-user.adoc
+++ b/downstream/modules/platform/proc-controller-creating-a-user.adoc
@@ -14,7 +14,8 @@ Normal user:: Normal users have read and write access limited to the resources (
 . From the navigation panel, select {MenuAMUsers}. 
 . Click btn:[Create user].
 . Enter the details about your new user in the fields on the *Create* user page. Fields marked with an asterisk (*) are required.
-. Normal users are the default when no User type is specified. To define a user as an administrator or auditor, select a *User type*.
+. Normal users are the default when no User type is specified. To define a user as an administrator or auditor, select a *User type* checkbox.
++
 [NOTE]
 ====
 If you are modifying your own password, log out and log back in again for it to take effect.
