AAP-19528 - Adding the subscription details to the access management guide

--- a/downstream/assemblies/platform/assembly-aap-manifest-files.adoc
+++ b/downstream/assemblies/platform/assembly-aap-manifest-files.adoc
@@ -1,8 +1,6 @@
 
-// emurtoug archived this file to avoid duplication of subscription content within Access mangement and authentication
+// emurtoug removed this file from the planning guide to avoid duplication of subscription content within Access mangement and authentication
 ifdef::context[:parent-context: {context}]
-
-
 
 [id="assembly-aap-obtain-manifest-files"]
 = Obtaining a manifest file
