--- a/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
@@ -1,11 +1,21 @@
 
-[id="proc-aap-activate-with-credentials_{context}"]
+[id="proc-aap-activate-with-credentials"]
 
 = Activate with credentials
 
 When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Subscription screen automatically displays. You can use your Red Hat credentials to retrieve and import your subscription directly into {PlatformNameShort}.
 
-.Procedures
+[NOTE]
+====
+You are opted in for Automation Analytics by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
+
+. From the navigation panel, select {MenuSetSystem}.
+. Uncheck the *Gather data for Automation Analytics* option.
+. Click btn:[Save].
+====
+
+.Procedure
+. Log in to {PlatformName}.
 . Select *Username / password*.
 . Enter your Red Hat username and password.
 . Select your subscription from the *Subscription* list.
@@ -15,7 +25,12 @@ When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Su
 You can also use your Satellite username and password if your cluster nodes are registered to Satellite through Subscription Manager.
 ====
 +
-. The Automation Analytics option is checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
 . Review the End User License Agreement and select *I agree to the End User License Agreement*.
 . Click btn:[Finish].
-. After your subscription has been accepted, the license screen displays and navigates you to the Dashboard of the {PlatformNameShort} interface. You can return to the license screen by selecting {MenuSetSubscription} from the navigation panel and clicking btn:[Edit subscription]..
+
+.Verification
+After your subscription has been accepted, subscription details are displayed. A status of _Compliant_ indicates your subscription is in compliance with the number of hosts you have automated within your subscription count. Otherwise, your status will show as _Out of Compliance_, indicating you have exceeded the number of hosts in your subscription.
+Other important information displayed include the following:
+Hosts automated:: Host count automated by the job, which consumes the license count
+Hosts imported:: Host count considering all inventory sources (does not impact hosts remaining)
+Hosts remaining:: Total host count minus hosts automated
