--- a/downstream/modules/platform/proc-aap-create-subscription-allocation.adoc
+++ b/downstream/modules/platform/proc-aap-create-subscription-allocation.adoc
@@ -10,3 +10,7 @@ Creating a new subscription allocation allows you to set aside subscriptions and
 . Enter a name for the allocation so that you can find it later.
 . Select *Type: Satellite 6.8* as the management application.
 . Click btn:[Create].
+
+[role="_additional-resources"]
+.Next steps
+* xref:proc-add-merge-subscriptions[Add the subscriptions] needed for {PlatformNameShort} to run properly.
