--- a/downstream/modules/platform/proc-attaching-subscriptions.adoc
+++ b/downstream/modules/platform/proc-attaching-subscriptions.adoc
@@ -1,6 +1,6 @@
 // emurtoug removed this assembly from the Planning guide to avoid duplication of subscription content added to Access management and authentication
 
-[id="proc-attaching-subscriptions_{context}"]
+[id="proc-attaching-subscriptions"]
 
 = Attaching your {PlatformName} subscription
 
@@ -42,8 +42,14 @@ Subscription Name: Red Hat Ansible Automation, Premium (5000 Managed Nodes)
 -----
 # subscription-manager attach --pool=<pool_id>
 -----
-
++
 You have now attached your {PlatformName} subscriptions to all nodes.
++
+. To remove this subscription, enter the following command:
++
+-----
+# subscription-manager remove --pool=<pool_id>
+-----
 
 .Verification
 
