--- a/downstream/modules/platform/ref-controller-licenses.adoc
+++ b/downstream/modules/platform/ref-controller-licenses.adoc
@@ -2,7 +2,7 @@
 
 = Component licenses
 
-To view the license information for the components included in {ControllerName}, see `/usr/share/doc/automation-controller-<version>/README`.
+To view the license information for the components included in {PlatformNameShort}, see `/usr/share/doc/automation-controller-<version>/README`.
 
 where `<version>` refers to the version of {ControllerName} you have installed.
 
