--- a/downstream/titles/central-auth/master.adoc
+++ b/downstream/titles/central-auth/master.adoc
@@ -12,6 +12,7 @@ include::attributes/attributes.adoc[]
 include::{Boilerplate}[]
 
 include::platform/platform/con-gw-overview-access-auth.adoc[leveloffset=+1]
+include::platform/assembly-gateway-licensing.adoc[leveloffset=+1]
 include::platform/assembly-gw-configure-authentication.adoc[leveloffset=+1]
 include::platform/assembly-gw-config-authentication-type.adoc[leveloffset=+2]
 include::platform/assembly-gw-mapping.adoc[leveloffset=+2]
