--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -1,22 +1,28 @@
 
-[id="proc-aap-activate-with-manifest_{context}"]
+[id="proc-aap-activate-with-manifest"]
 
 = Activate with a manifest file
 
-If you have a subscriptions manifest, you can upload the manifest file either by using the {PlatformName} interface or manually in an Ansible Playbook.
+If you have a subscriptions manifest, you can upload the manifest file either by using the {PlatformName} interface.
+
+[NOTE]
+====
+You are opted in for Automation Analytics by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
+
+. From the navigation panel, select {MenuSetSystem}.
+. Uncheck the *Gather data for Automation Analytics* option.
+. Click btn:[Save].
+====
 
 .Prerequisites
 You must have a Red Hat Subscription Manifest file exported from the Red Hat Customer Portal. For more information, see xref:assembly-aap-obtain-manifest-files[Obtaining a manifest file].
 
-.Uploading with the interface
+.Procedure
 
-. Complete steps to generate and download the manifest file
 . Log in to {PlatformName}.
-//[ddacosta] There is no license setting in the test environment for 2.4? Need to verify this selection. In 2.5, I think it will be Settings[Subscription]...
 . If you are not immediately prompted for a manifest file, go to {MenuSetSubscription}.
 . Select *Subscription manifest*.
 . Click btn:[Browse] and select the manifest file.
-. The Automation Analytics option is checked by default. These selections help Red Hat improve the product by delivering you a much better user experience. You can opt out by deselecting the options.
 . Review the End User License Agreement and select *I agree to the End User License Agreement*.
 . Click btn:[Finish].
 
@@ -25,12 +31,14 @@ You must have a Red Hat Subscription Manifest file exported from the Red Hat Cus
 If the btn:[BROWSE] button is disabled on the License page, clear the *USERNAME* and *PASSWORD* fields.
 ====
 
-.Uploading manually
+.Verification
+After your subscription has been accepted, subscription details are displayed. A status of _Compliant_ indicates your subscription is in compliance with the number of hosts you have automated within your subscription count. Otherwise, your status will show as _Out of Compliance_, indicating you have exceeded the number of hosts in your subscription.
+Other important information displayed include the following:
+Hosts automated:: Host count automated by the job, which consumes the license count
+Hosts imported:: Host count considering all inventory sources (does not impact hosts remaining)
+Hosts remaining:: Total host count minus hosts automated
 
-If you are unable to apply or update the subscription information by using the {PlatformName} interface, you can upload the subscriptions manifest manually in an Ansible Playbook by using the `license` module in the `ansible.controller` collection.
+[role="_additional-resources"]
+.Next steps
+* You can return to the license screen by selecting {MenuSetSubscription} from the navigation panel and clicking btn:[Edit subscription].
 
------
-- name: Set the license using a file
-  license:
-  manifest: "/tmp/my_manifest.zip"
------
