--- a/downstream/modules/platform/proc-aap-add-merge-subscriptions.adoc
+++ b/downstream/modules/platform/proc-aap-add-merge-subscriptions.adoc
@@ -1,5 +1,5 @@
 
-[id="proc-add-merge-subscriptions_{context}"]
+[id="proc-add-merge-subscriptions"]
 
 = Adding subscriptions to a subscription allocation
 
@@ -12,11 +12,6 @@ Once an allocation is created, you can add the subscriptions you need for {Platf
 . Enter the number of {PlatformNameShort} Entitlement(s) you plan to add.
 . Click btn:[Submit].
 
-.Verification
-After your subscription has been accepted, subscription details are displayed. A status of _Compliant_ indicates your subscription is in compliance with the number of hosts you have automated within your subscription count. Otherwise, your status will show as _Out of Compliance_, indicating you have exceeded the number of hosts in your subscription.
-
-Other important information displayed include the following:
-
-Hosts automated:: Host count automated by the job, which consumes the license count
-Hosts imported:: Host count considering all inventory sources (does not impact hosts remaining)
-Hosts remaining:: Total host count minus hosts automated
+[role="_additional-resources"]
+.Next steps
+* xref:proc-aap-generate-manifest-file[Download the manifest file] from Red Hat Subscription Management. 
