--- a/downstream/modules/platform/ref-controller-trial-evaluation.adoc
+++ b/downstream/modules/platform/ref-controller-trial-evaluation.adoc
@@ -1,9 +1,8 @@
 [id="ref-controller-trial-evaluation"]
 
 = Trial and evaluation
-You require a license to run {ControllerName}. 
-You can start by using a free trial license.
+A license is required to run {PlatformNameShort}. You can start by using a free trial license.
 
-* Trial licenses for {PlatformNameShort} are available at: https://www.redhat.com/en/products/trials?products=ansible
+* Trial licenses for {PlatformNameShort} are available at the link:https://www.redhat.com/en/products/trials?products=ansible[Red Hat product trial center].
 
-* Support is not included in a trial license or during an evaluation of the {ControllerName} software.
+* Support is not included in a trial license or during an evaluation of the {PlatformNameShort}.
