--- a/downstream/modules/platform/proc-operator-link-components.adoc
+++ b/downstream/modules/platform/proc-operator-link-components.adoc
@@ -27,7 +27,7 @@ spec:
   hub:
     disabled: false
     storage_type: file
-    file_storage_storage_class: nfs-local-rwx
+    file_storage_storage_class: <read-write-many-storage-class>
     file_storage_size: 10Gi
 
 ----
