--- a/downstream/modules/platform/proc-operator-deploy-central-config.adoc
+++ b/downstream/modules/platform/proc-operator-deploy-central-config.adoc
@@ -33,7 +33,7 @@ The following procedure simulates a scenario where you have {ControllerName} as 
             disabled: false
             ## uncomment if using file storage for Content pod
             storage_type: file
-            file_storage_storage_class: your-rwx-storage-class
+            file_storage_storage_class: <your-read-write-many-storage-class>
             file_storage_size: 10Gi
 
             ## uncomment if using S3 storage for Content pod
