Removing TBDs from Controller docs
Remove TBDs from Controller documentation

https://issues.redhat.com/browse/AAP-30985

--- a/downstream/modules/platform/proc-controller-configure-analytics.adoc
+++ b/downstream/modules/platform/proc-controller-configure-analytics.adoc
@@ -22,7 +22,7 @@ image::automation_analytics.png[Automation analytics page]
 * *Red Hat or Satellite password*: This password is used to send data to {Analytics}.
 * *Last gather date for Automation Analytics*: Set the date and time
 * *Automation Analytics Gather Interval*: Interval (in seconds) between data gathering.
-//No tooltip and no information for this.
-* *Last gathered entries from the data collection service of {Analytics}*: TBD
+//This field has been removed.
+//* *Last gathered entries from the data collection service of {Analytics}*: TBD
 
 
