--- a/downstream/modules/platform/proc-controller-view-host.adoc
+++ b/downstream/modules/platform/proc-controller-view-host.adoc
@@ -13,8 +13,8 @@ The *Hosts* page displays the following information about the host or hosts affe
 
 * The *Name* of the Host. 
 * The *Inventory* associated with that host. Selecting this inventory displays details of the inventory.
-* When the Host was *Created* and who by. Selecting the creator displays TBD
-* When the Host was *Last Modified*. Selecting the creator displays TBD
+* When the Host was *Created* and who by. Selecting the creator displays details of the creator.
+* When the Host was *Last Modified*. Selecting the creator displays details of the creator.
 * *Variables* associated with the Host. You can display the variables in YAML or JSON format.
 
 . Click btn:[Edit host] to edit details of the host.
