--- a/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
@@ -4,7 +4,7 @@
 
 You can configure your LDAP SSL configuration for {ControllerName} through any of the following options:
 
-* The automation controller user interface.
+* The {ControllerName} user interface.
 //Need to add a link to Donna's Auth doc when finished.
 //* The platform gateway user interface. See Authentication doc for additional steps.
 * The following procedure steps.
