Adding note about building EE image
Unable to run job in custom EE

https://issues.redhat.com/browse/AAP-30674

Affects `controller/user-guide` and `builder`

--- a/downstream/modules/builder/proc-executing-build.adoc
+++ b/downstream/modules/builder/proc-executing-build.adoc
@@ -4,6 +4,11 @@
 
 After you create a definition file, you can proceed to build an {ExecEnvNameSing} image.
 
+[NOTE]
+====
+When building an {ExecEnvShort} image, it must support the architecture that {PlatformNameShort} is deployed with.
+====
+
 .Prerequisites
 * You have created a definition file.
 
