--- a/downstream/modules/platform/ref-controller-install-builder.adoc
+++ b/downstream/modules/platform/ref-controller-install-builder.adoc
@@ -6,4 +6,6 @@ To build images, you must have Podman or Docker installed, along with the `ansib
 
 The `--container-runtime` option must correspond to the Podman or Docker executable you intend to use.
 
+When building an {ExecEnvShort} image, it must support the architecture that {PlatformNameShort} is deployed with.
+
 For more information, see link:https://ansible.readthedocs.io/projects/builder/en/latest/#quickstart-for-ansible-builder[Quickstart for Ansible Builder], or link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/creating_and_consuming_execution_environments/index[Creating and consuming execution environments].
