Edits to key functionality chapter
Create Conceptual overview section of Getting started with AAP

https://issues.redhat.com/browse/AAP-29066

Affects `titles/getting-started`

--- a/downstream/modules/platform/con-gs-dashboard-components.adoc
+++ b/downstream/modules/platform/con-gs-dashboard-components.adoc
@@ -2,6 +2,8 @@
 
 = Dashboard components
 
+image::AAP_dashboard_2.5.png[Dashboard]
+
 After you install {PlatformNameShort} on your system and log in for the first time, familiarize yourself with the platform dashboard. 
 
 Quick starts::
