AAP-19528 updates for peer review changes

--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -7,10 +7,10 @@ If you have a subscriptions manifest, you can upload the manifest file either by
 
 [NOTE]
 ====
-You are opted in for Automation Analytics by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
+You are opted in for {Analytics} by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
 
 . From the navigation panel, select {MenuSetSystem}.
-. Uncheck the *Gather data for Automation Analytics* option.
+. Uncheck the *Gather data for {Analytics}* option.
 . Click btn:[Save].
 ====
 
