--- a/downstream/modules/platform/ref-controller-subscription-types.adoc
+++ b/downstream/modules/platform/ref-controller-subscription-types.adoc
@@ -21,4 +21,4 @@
 All subscription levels include regular updates and releases of {ControllerName}, Ansible, and any other components of the {PlatformNameShort}.
 
 For more information, contact Ansible through the link:https://access.redhat.com/[Red Hat Customer Portal] 
-or at the http://www.ansible.com/contact-us/[Ansible site].
+or at the link:http://www.ansible.com/contact-us/[Ansible site].
