--- a/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-credentials.adoc
@@ -7,10 +7,10 @@ When {PlatformNameShort} launches for the first time, the {PlatformNameShort} Su
 
 [NOTE]
 ====
-You are opted in for Automation Analytics by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
+You are opted in for {Analytics} by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
 
 . From the navigation panel, select {MenuSetSystem}.
-. Uncheck the *Gather data for Automation Analytics* option.
+. Uncheck the *Gather data for {Analytics}* option.
 . Click btn:[Save].
 ====
 
@@ -34,3 +34,4 @@ Other important information displayed include the following:
 Hosts automated:: Host count automated by the job, which consumes the license count
 Hosts imported:: Host count considering all inventory sources (does not impact hosts remaining)
 Hosts remaining:: Total host count minus hosts automated
+ 
