--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -9,7 +9,7 @@ If you have a subscriptions manifest, you can upload the manifest file either by
 ====
 You are opted in for {Analytics} by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
 
-. From the navigation panel, select Settings > System.
+. From the navigation panel, select menu:[Settings] and select the *Miscellaneous System settings* option.
 . Click btn:[Edit].
 . Switch the *Gather data for Automation Analytics* toggle off.
 . Click btn:[Save].
