AAP18813 - Adding OAuth/Application content to the access management guide

--- a/downstream/assemblies/platform/assembly-controller-applications.adoc
+++ b/downstream/assemblies/platform/assembly-controller-applications.adoc
@@ -3,7 +3,7 @@
 = Applications
 
 Create and configure token-based authentication for external applications such as ServiceNow and Jenkins.
-With token-based authentication, external applications can easily integrate with {ControllerName}.
+With token-based authentication, external applications can easily integrate with {PlatformNameShort}.
 
 With OAuth 2 you can use tokens to share data with an application without disclosing login information. 
 You can configure these tokens as read-only.
@@ -15,5 +15,8 @@ By separating the issue of tokens under *OAuth Applications*, you can revoke all
 
 include::platform/ref-controller-applications-getting-started.adoc[leveloffset=+1]
 include::platform/proc-controller-create-application.adoc[leveloffset=+1]
+include::platform/ref-gw-access-rules-apps-tokens.adoc[leveloffset=+2]
+include::platform/ref-gw-application-functions.adoc[leveloffset=+2]
+include::platform/ref-gw-request-token-after-expiration.adoc[leveloffset=+3]
 //include::platform/ref-controller-apps-add-tokens.adoc[leveloffset=+2]
-include::platform/proc-controller-apps-create-tokens.adoc[leveloffset=+2]
+include::platform/proc-controller-apps-create-tokens.adoc[leveloffset=+1]
