--- a/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
+++ b/downstream/assemblies/platform/assembly-gw-token-based-authentication.adoc
@@ -4,10 +4,23 @@ ifdef::context[:parent-context: {context}]
 
 [id="gw-token-based-authentication"]
 
-= Configuring token-based authentication
+= Configuring access to external applications with token-based authentication
 
-[TBD] The content for this is in progress in separate link:https://docs.google.com/document/d/1GLk5zcD-8hZxU61Ik8wASDofkX7iQo5IJvkCOv5gRMw/edit?usp=sharing[Applications] and link:https://docs.google.com/document/d/1w9KjK8CybZ3w0u0DGNf0rNDC72vomwbdt5rZkUZCaBk/edit#bookmark=id.1rtgxk9mwxi0[Token-based authentication] drafts. Once converted/updated in AsciiDoc and in the repo, update this section to include those modules. 
+Token-based authentication permits authentication of third-party tools and services with the platform through integrated OAuth 2 token support, and allows you to access external applications without having to store your password on disk.
+For more information on the OAuth2 specification, see link:https://docs.google.com/document/d/1mEYguv3V0WUUHBMc8tsgqlK8RB3ro8IZSlQmMuFfhww/edit#heading=h.x3j3jrhlprvm[The OAuth 2.0 Authorization Framework].
+For more information on using the `manage` utility to create tokens, see link:https://docs.google.com/document/d/1mEYguv3V0WUUHBMc8tsgqlK8RB3ro8IZSlQmMuFfhww/edit#heading=h.x3j3jrhlprvm[Token and session management].
 
+include::assembly-controller-applications.adoc[leveloffset=+1]
+include::platform/ref-controller-app-token-functions.adoc[leveloffset=+1]
+include::platform/ref-controller-refresh-existing-token.adoc[leveloffset=+2]
+include::platform/ref-controller-revoke-access-token.adoc[leveloffset=+2]
+include::platform/ref-controller-token-session-management.adoc[leveloffset=+1]
+include::platform/ref-controller-create-oauth2-token.adoc[leveloffset=+2]
+include::platform/ref-controller-revoke-oauth2-token.adoc[leveloffset=+2]
+include::platform/ref-controller-clear-tokens.adoc[leveloffset=+2]
+include::platform/ref-controller-expire-sessions.adoc[leveloffset=+2]
+include::platform/ref-controller-clear-sessions.adoc[leveloffset=+2]
 
 ifdef::parent-context[:context: {parent-context}]
 ifndef::parent-context[:!context:]
+ 
