AAP-19528 - Adding the subscription details to the access management guide (#1864)
* AAP-19528 - Adding the subscription details to the access management guide

* AAP-19528 updates for peer review changes

--- a/downstream/modules/platform/proc-aap-generate-manifest-file.adoc
+++ b/downstream/modules/platform/proc-aap-generate-manifest-file.adoc
@@ -1,5 +1,5 @@
 
-[id="proc-generate-manifest-file_{context}"]
+[id="proc-aap-generate-manifest-file"]
 
 = Downloading a manifest file
 
@@ -10,8 +10,9 @@ After an allocation is created and has the appropriate subscriptions on it, you 
 . From the link:https://access.redhat.com/management/subscription_allocations/[Subscription Allocations] page, click on the name of the *Subscription Allocation* to which you would like to generate a manifest.
 . Click the *Subscriptions* tab.
 . Click btn:[Export Manifest] to download the manifest file.
++
+This downloads a file _manifest_<allocation name>_<date>.zip_ to your default downloads folder.
 
-[NOTE]
-====
-The file is saved to your default downloads folder and can now be uploaded to xref:proc-aap-activate-with-manifest_activate-aap[activate {PlatformName}].
-====
+[role="_additional-resources"]
+.Next steps
+* xref:proc-aap-activate-with-manifest[Upload the manifest file] to activate {PlatformName}.
