--- a/downstream/modules/platform/ref-controller-subscription-types.adoc
+++ b/downstream/modules/platform/ref-controller-subscription-types.adoc
@@ -18,7 +18,7 @@
 ** Review the SLA at link:https://access.redhat.com/support/offerings/production/sla[Product Support Terms of Service]
 ** Review the link:https://access.redhat.com/support/policy/severity[Red Hat Support Severity Level Definitions]
 
-All subscription levels include regular updates and releases of {ControllerName}, Ansible, and any other components of the Platform.
+All subscription levels include regular updates and releases of {ControllerName}, Ansible, and any other components of the {PlatformNameShort}.
 
 For more information, contact Ansible through the link:https://access.redhat.com/[Red Hat Customer Portal] 
-or at http://www.ansible.com/contact-us/.
+or at the link:http://www.ansible.com/contact-us/[Ansible site].
