Update procedures for automation mesh
Corrections

Corrections from Hackathon for operator-mesh doc

https://issues.redhat.com/browse/AAP-30570

--- a/downstream/modules/platform/proc-define-mesh-node-types.adoc
+++ b/downstream/modules/platform/proc-define-mesh-node-types.adoc
@@ -57,15 +57,15 @@ For all other nodes:
 *** If you are not adding a hop node, make sure *Peers from Control* is checked.
 *** If you are adding a hop node, make sure *Peers from Control* is not checked.
 *** For execution nodes that communicate with hop nodes, do not check this box.
-** To peer an execution node with a hop node, click the image:search.png[Search,15,15] icon next to the *Peers* field.
+** To peer an execution node with a hop node, select the execution node, then select *Peers* tab.
 +
 The Select Peers window is displayed.
 +
-Peer the execution node to the hop node.
+** Select the execution node to peer to the hop node.
 
-. Click btn:[Save].
-+
-image::instances_create_details.png[Create Instance details]
+** Click btn:[Associate peers].
+//+
+//image::instances_create_details.png[Create Instance details]
 
 ifdef::operator-mesh[]
 . To view a graphical representation of your updated topology, see link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html/automation_controller_administration_guide/assembly-controller-topology-viewer[Topology viewer].
