Adding link to authentication

--- a/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
+++ b/downstream/modules/platform/proc-configuring-controller-ldap-security.adoc
@@ -5,8 +5,7 @@
 You can configure your LDAP SSL configuration for {ControllerName} through any of the following options:
 
 * The {ControllerName} user interface.
-//Need to add a link to Donna's Auth doc when finished.
-//* The platform gateway user interface. See Authentication doc for additional steps.
+* The platform gateway user interface. See link:{BaseURL}/red_hat_ansible_automation_platform/{PlatformVers}/html-single/access_management_and_authentication/index#controller-set-up-LDAP[Access management and authentication] for additional steps.
 * The following procedure steps.
 
 .Procedure
