Remove field from procedure
Remove entry from System settings

https://issues.redhat.com/browse/AAP-30850

--- a/downstream/modules/platform/proc-controller-configure-system.adoc
+++ b/downstream/modules/platform/proc-controller-configure-system.adoc
@@ -8,10 +8,10 @@ You can use the *System* menu to define automation controller system settings.
 
 . From the navigation panel, select {MenuSetSystem}.
 The *System Settings* page is displayed.
-+
-image::system-settings-page.png[System settings page - unedited]
+//+
+//image::system-settings-page.png[System settings page - unedited]
 . Click btn:[Edit].
-+ 
+//+ 
 //image::system-settings-full.png[System settings - configurable fields]
 . You can configure the following options:
 +
@@ -30,7 +30,8 @@ If this setting is an empty list (the default), the headers specified by `REMOTE
 Enter one path per line.
 +
 * *Last gather date for Automation Analytics*: Set the date and time.
-* *Last gathered entries from the data collection service of {Analytics}*: Do not enter anything in this field.
+//This field has been removed by https://github.com/ansible/awx/pull/15497
+//* *Last gathered entries from the data collection service of {Analytics}*: Do not enter anything in this field.
 * *{Analytics} Gather Interval*: Interval (in seconds) between data gathering. 
 +
 If *Gather data for {Analytics}* is set to false, this value is ignored.
