--- a/downstream/modules/platform/ref-controller-automation-analytics.adoc
+++ b/downstream/modules/platform/ref-controller-automation-analytics.adoc
@@ -14,7 +14,12 @@ No credential secrets, personal data, automation variables, or task output is ga
 
 For more information, see xref:ref-controller-data-collection-details[Details of data collection].
 
-To enable or disable this feature, use the *Gather data for {Analytics} and enter your Red Hat customer credentials in the *Miscellaneous System settings* of the System configuration list of options in the {MenuAEAdminSettings} menu.
+To enable or disable this feature, use the following steps:
+
+. From the navigation panels, select {MenuAEAdminSettings}.
+. Select *Miscellaneous System settings* from the list of *System* options. 
+. Toggle the *Gather data for {Analytics}* switch and enter your Red Hat customer credentials.
+. Click btn:[Save].
 
 image:configure-controller-system-misc-analytics.png[Miscellaneous System Settings]
 
