--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -11,7 +11,7 @@ You are opted in for {Analytics} by default when you activate the platform on fi
 
 . From the navigation panel, select menu:[Settings] and select the *Miscellaneous System settings* option.
 . Click btn:[Edit].
-. Switch the *Gather data for Automation Analytics* toggle off.
+. Toggle the *Gather data for Automation Analytics* switch to the off position.
 . Click btn:[Save].
 ====
 
