AAP-30863 update 2.4 docs for automatic Analytics opt in changes (#1872)
* AAP-30863 update 2.4 docs for automatic Analytics opt in changes

* AAP-30863 - fixed the menu selections to correctly reflect the 2.4 environment

* AAP-30863 - implemented peer review changes

--- a/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
+++ b/downstream/modules/platform/proc-aap-activate-with-manifest.adoc
@@ -5,6 +5,16 @@
 
 If you have a subscriptions manifest, you can upload the manifest file either by using the {PlatformName} interface or manually in an Ansible Playbook.
 
+[Note]
+====
+You are opted in for {Analytics} by default when you activate the platform on first time log in. This helps Red Hat improve the product by delivering you a much better user experience. You can opt out, after activating {PlatformNameShort}, by doing the following: 
+
+. From the navigation panel, select menu:[Settings] and select the *Miscellaneous System settings* option.
+. Click btn:[Edit].
+. Toggle the *Gather data for Automation Analytics* switch to the off position.
+. Click btn:[Save].
+====
+
 .Prerequisites
 You must have a Red Hat Subscription Manifest file exported from the Red Hat Customer Portal. For more information, see xref:assembly-aap-obtain-manifest-files[Obtaining a manifest file].
 
@@ -13,10 +23,13 @@ You must have a Red Hat Subscription Manifest file exported from the Red Hat Cus
 . Complete steps to generate and download the manifest file
 . Log in to {PlatformName}.
 //[ddacosta] There is no license setting in the test environment for 2.4? Need to verify this selection. In 2.5, I think it will be Settings[Subscription]...
-. If you are not immediately prompted for a manifest file, go to menu:Settings[License].
+. If you are not immediately prompted for a manifest file, go to menu:Settings[] and select the *License* option.
 . Make sure the *Username* and *Password* fields are empty.
 . Click btn:[Browse] and select the manifest file.
 . Click btn:[Next].
+. Review the End User License Agreement and select *I agree to the End User License Agreement*.
+. Click btn:[Submit].
+. Once your subscription has been accepted, the license screen displays and navigates you to the Dashboard of the {PlatformNameShort} interface. You can return to the license screen by clicking the btn:[Settings] icon *⚙* and selecting the *License* option from the Settings screen.
 
 [NOTE]
 ====
