--- a/downstream/modules/platform/ref-controller-automation-analytics.adoc
+++ b/downstream/modules/platform/ref-controller-automation-analytics.adoc
@@ -2,7 +2,7 @@
 
 = {Analytics}
 
-When you imported your license for the first time, you were given options related to the collection of data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
+When you imported your license for the first time, you were automatically opted in for the collection of data that powers {Analytics}, a cloud service that is part of the {PlatformNameShort} subscription.
 
 [IMPORTANT]
 ====
@@ -14,7 +14,12 @@ No credential secrets, personal data, automation variables, or task output is ga
 
 For more information, see xref:ref-controller-data-collection-details[Details of data collection].
 
-To enable this feature, turn on data collection for {Analytics} and enter your Red Hat customer credentials in the *Miscellaneous System settings* of the System configuration list of options in the {MenuAEAdminSettings} menu.
+To enable or disable this feature, use the following steps:
+
+. From the navigation panels, select {MenuAEAdminSettings}.
+. Select *Miscellaneous System settings* from the list of *System* options. 
+. Toggle the *Gather data for {Analytics}* switch and enter your Red Hat customer credentials.
+. Click btn:[Save].
 
 image:configure-controller-system-misc-analytics.png[Miscellaneous System Settings]
 
